--- a/hmily-demo/hmily-demo-xa/hmily-demo-xa-dubbo/hmily-demo-xa-dubbo-account/pom.xml
+++ b/hmily-demo/hmily-demo-xa/hmily-demo-xa-dubbo/hmily-demo-xa-dubbo-account/pom.xml
@@ -30,6 +30,17 @@
     <artifactId>hmily-demo-xa-dubbo-account</artifactId>
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.dromara</groupId>
             <artifactId>hmily-demo-common</artifactId>
         </dependency>
